--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -351,7 +351,7 @@
   </div>
 
   <!-- Resources -->
-  <h2>Bloublou ça marche</h2>
+  <h2>Bloublou ça marche !</h2>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
